Make the ball larger when in portait mode

--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
 
     /* Floating dot style */
     .dot {
-      width: 5vw;
-      height: 5vw;
-      border-radius: 50%;
-      font-size: 5vw;
+      width: max(5vw,5vh);
+      height: max(5vw,5vh);
+      font-size: max(5vw,5vh);
       position: absolute;
     }
 
