Slightly more cryptical instructions

--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
   </div>
   <div class="instructions">
     <p>
-      Touch each side of the scoreboard to increase the score. The ball will move to the side that last scored.
+      <span style="color: #712836; font-size: 2em">&#9632;</span> or <span style="color: #1B4469; font-size: 2em">&#9632;</span> to score
     </p>
     <p>
-      To undo the last point, touch ↩.
+      ↩ to undo last point
     </p>
     <p>
-      To reset the scores to zero, touch ⟲.
+      ⟲ to reset the score
     </p>
     <p>
-      To make this message go away, turn your phone to landscape.
+      <span><i class="fas fa-mobile-alt icon fa-rotate-270" style="margin: 0.2em"></i></span>  to hide this message
     </p>
   </div>
 </body>
