--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+  <title>Scoreboard</title>
+  <meta name="description" content="A simple online scoreboard that works in mobile." />
+  <meta property="og:title" content="Simple scoreboard" />
+  <meta property="og:url" content="https://jgpaiva.github.io/scoreboard" />
+  <meta property="og:description" content="A simple online scoreboard that works in mobile." />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
