--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta property="og:title" content="Simple scoreboard" />
   <meta property="og:url" content="https://jgpaiva.github.io/scoreboard" />
   <meta property="og:description" content="A simple online scoreboard that works in mobile." />
+  <meta property="og:image" content="//jgpaiva.github.io/scoreboard/preview.png" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
