Make instructions a bit clearer

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <i class="fas fa-sync"></i> to reset the score
     </p>
     <p>
-      <span><i class="fas fa-mobile-alt icon fa-rotate-270" style="margin: 0.2em"></i></span> to hide this message
+      <span><i class="fas fa-mobile-alt icon fa-rotate-270" style="margin: 0.2em"></i></span> rotate for fullscreen
     </p>
   </div>
 </body>
